--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body class="styleBody">
-    <!-- <header>
-      <div class="fondoHeader">
-        <h2 class="textoHeader"></h2>
-      </div>
-    </header> -->
-    <main class="mainStyle">
+    <header class="headerStyle">
       <img class="fotoGonzalo" src="./images/FotoCV.jpg" alt="fotoGonzalo" />
+      <h2 class="textoInicio">Hola soy Gonzalo Magallanes y este es mi portfolio :)</h2>
+    </header>
+    <main class="mainStyle">
+      <h1>ONICHAN</h1>
     </main>
     <footer>
       <h1></h1>
