--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="link navText" href="#sobreMi"> Sobre mí </a>
         <a class="link navText" href="#habilidades"> Habilidades </a>
         <a class="link navText" href="#proyectos"> Proyectos </a>
-        <a class="link navText" href=""> Contacto</a>
+        <a class="link navText" href="#contactos"> Contacto</a>
       </nav>
     </header>
     <main class="mainStyle">
@@ -56,13 +56,44 @@
           <h1 class="proyectoHeader">Mis proyectos</h1>
         </div>
         <div class="proyectoGrid">
-          <a target="_blank" href="https://gonmagallanes.github.io/superMercadoJS/"><img class="fotoProyectos" src="./images/superJS.jpeg" alt="supermercado" /></a>
-          <a target="_blank" href="https://gonmagallanes.github.io/NBA_Store/"><img class="fotoProyectos" src="./images/storeNBA.jpeg" alt="NBA_Store" /></a>
-          <a target="_blank" href="https://gonmagallanes.github.io/ProfesoresTemplate/"><img class="fotoProyectos" src="./images/profesTemplate.jpeg" alt="TemplateProfesores" /></a>
-          <a target="_blank" href="https://gonmagallanes.github.io/TablaSistemas/"> <img class="fotoProyectos" src="./images/tablaSistemas.jpeg" alt="Tabla Sistemas" /></a>
+          <a target="_blank" href="https://gonmagallanes.github.io/superMercadoJS/">
+            <img class="fotoProyectos" src="./images/superJS.jpeg" alt="supermercado" />
+          </a>
+          <a target="_blank" href="https://gonmagallanes.github.io/NBA_Store/">
+            <img class="fotoProyectos" src="./images/storeNBA.jpeg" alt="NBA_Store" />
+          </a>
+          <a target="_blank" href="https://gonmagallanes.github.io/ProfesoresTemplate/">
+            <img class="fotoProyectos" src="./images/profesTemplate.jpeg" alt="TemplateProfesores" />
+          </a>
+          <a target="_blank" href="https://gonmagallanes.github.io/TablaSistemas/">
+            <img class="fotoProyectos" src="./images/tablaSistemas.jpeg" alt="Tabla Sistemas" />
+          </a>
+        </div>
+      </section>
+      <hr />
+      <section id="contactos">
+        <div>
+          <h1 class="contactosHeader">Contactos</h1>
+        </div>
+        <div class="cajaContacto">
+          <label for="nombre">Nombre y Apellido</label>
+          <input class="caja" type="text" id="nombre" />
+
+          <label for="mail">Email</label>
+          <input class="caja" type="email" id="mail" />
+
+          <label for="mensaje">Mensaje</label>
+          <input class="caja cajaMensaje" type="text" id="mensaje" />
+
+          <button style="margin-top: 2vw; padding: 10px; border-radius: 2px">Enviar</button>
         </div>
       </section>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer">
+      <div class="footerCaja">
+        <a target="_blank" href="https://github.com/gonmagallanes"><img class="fotoLogos" src="./images/github.png" alt="" /></a>
+        <a target="_blank" href="https://www.linkedin.com/in/gonzalomagallanes/"><img class="fotoLogos" src="./images/linkedin.png" alt="" /></a>
+      </div>
+    </footer>
   </body>
 </html>
