--- a/index.html
+++ b/index.html
@@ -5,22 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gonzalo Magallanes</title>
     <link rel="stylesheet" href="./style/style.css" />
-    <link rel="stylesheet" href="./package-lock.json" />
-    <link rel="stylesheet" href="./package.json" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+      crossorigin="anonymous"
+    />
   </head>
+
   <body class="styleBody">
-    <header class="headerStyle">
-      <div class="efectoPerfil">
-        <h2 class="textoInicio">Gonzalo Magallanes</h2>
-        <h3 style="color: #e2e8dd">Estudiante de Sistemas</h3>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Gonzalo Magallanes</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div style="margin-left: auto" class="navbar-nav">
+            <a class="nav-link" href="#sobreMi">Sobre Mí</a>
+            <a class="nav-link" href="#proyectos">Proyectos</a>
+            <a class="nav-link" href="#contactos">Contactos</a>
+          </div>
+        </div>
       </div>
-      <nav class="navNav">
-        <a class="link navText" href="#sobreMi"> Sobre mí </a>
-        <a class="link navText" href="#habilidades"> Habilidades </a>
-        <a class="link navText" href="#proyectos"> Proyectos </a>
-        <a class="link navText" href="#contactos"> Contacto</a>
-      </nav>
-    </header>
+    </nav>
+
     <main class="mainStyle">
       <section id="sobreMi">
         <div class="mainDescripcion">
@@ -75,17 +92,19 @@
         <div>
           <h1 class="contactosHeader">Contactos</h1>
         </div>
-        <div class="cajaContacto">
-          <label for="nombre">Nombre y Apellido</label>
-          <input class="caja" type="text" id="nombre" />
+        <div>
+          <form id="formulario-contacto" class="cajaContacto">
+            <label for="name">Nombre</label>
+            <input class="caja" type="text" id="name" />
 
-          <label for="mail">Email</label>
-          <input class="caja" type="email" id="mail" />
+            <label for="mail">Email</label>
+            <input class="caja" type="email" id="mail" />
 
-          <label for="mensaje">Mensaje</label>
-          <input class="caja cajaMensaje" type="text" id="mensaje" />
+            <label for="mensaje">Mensaje</label>
+            <input class="caja cajaMensaje" type="text" id="mensaje" />
 
-          <button style="margin-top: 2vw; padding: 10px; border-radius: 2px">Enviar</button>
+            <input type="submit" style="margin-top: 2vw; padding: 10px; border-radius: 10px" value="Enviar" />
+          </form>
         </div>
       </section>
     </main>
@@ -95,5 +114,12 @@
         <a target="_blank" href="https://www.linkedin.com/in/gonzalomagallanes/"><img class="fotoLogos" src="./images/linkedin.png" alt="" /></a>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script src="formulario.js"></script>
   </body>
 </html>
