--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
         <div>
           <form id="formulario-contacto" class="cajaContacto">
             <label for="name">Nombre</label>
-            <input class="caja" type="text" id="name" />
+            <input name="nombre" class="caja" type="text" id="name" />
 
             <label for="mail">Email</label>
-            <input class="caja" type="email" id="mail" />
+            <input name="mail" class="caja" type="email" id="mail" />
 
             <label for="mensaje">Mensaje</label>
-            <input class="caja cajaMensaje" type="text" id="mensaje" />
+            <input name="mensaje" class="caja cajaMensaje" type="text" id="mensaje" />
 
             <input type="submit" style="margin-top: 2vw; padding: 10px; border-radius: 10px" value="Enviar" />
           </form>
