--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
           <img class="fotoGonzalo" src="./images/FotoCV.jpg" alt="fotoGonzalo" />
           <h2>¡Hola! Mi nombre es Gonzalo Magallanes y estudio en el Tupac</h2>
         </div>
+        <div style="display: flex; justify-content: center">
+          <button class="CVbutton"><a target="_blank" class="CVlink" href="./images/gonzaloMagallanesCV.pdf">Mi CV</a></button>
+        </div>
       </section>
       <hr />
       <section class="mainSkills" id="habilidades">
